Add TodoMaster React app as featured project
 Features:
- Added TodoMaster as the first featured project
- Enhanced project card with 'featured' styling
- Updated project description highlighting React 18 and modern development
- Added appropriate tech tags and GitHub links

 TodoMaster Highlights:
- Advanced React development with hooks and modern patterns
- Component architecture and state management
- Priority system and smart filtering
- Local storage persistence
- Responsive design with animations

This demonstrates advanced frontend development skills and modern React expertise.

--- a/Index.html
+++ b/Index.html
@@ -210,6 +210,33 @@
         <p>Here are some of my recent projects that showcase my skills and passion for development</p>
       </div>
       <div class="project-container">
+        <div class="project-card featured">
+          <div class="project-image">
+            <i class="fas fa-check-double"></i>
+          </div>
+          <div class="project-content">
+            <h3>TodoMaster - Advanced React Todo App</h3>
+            <p>A sophisticated task management application built with React 18, featuring priority systems, smart filtering, real-time statistics, and local storage persistence. Demonstrates modern React patterns, component architecture, and responsive design principles.</p>
+            <div class="project-tech">
+              <span class="tech-tag">React 18</span>
+              <span class="tech-tag">Webpack 5</span>
+              <span class="tech-tag">Modern CSS3</span>
+              <span class="tech-tag">Local Storage</span>
+              <span class="tech-tag">Responsive Design</span>
+            </div>
+            <div class="project-links">
+              <a href="https://github.com/0ashutosh1/todomaster-react" target="_blank" class="project-link">
+                <i class="fab fa-github"></i>
+                View Code
+              </a>
+              <a href="https://0ashutosh1.github.io/todomaster-react" target="_blank" class="project-link">
+                <i class="fas fa-external-link-alt"></i>
+                Live Demo
+              </a>
+            </div>
+          </div>
+        </div>
+        
         <div class="project-card">
           <div class="project-image">
             <i class="fas fa-coins"></i>
