Update TodoMaster project links to correct GitHub repository
 Updated Links:
- GitHub repository: https://github.com/0ashutosh1/TODO-APP
- Live demo: https://0ashutosh1.github.io/TODO-APP/demo.html

 Repository Status:
- TodoMaster React app successfully pushed to GitHub
- All 26 files committed including components, styles, and documentation
- Ready for GitHub Pages deployment

--- a/Index.html
+++ b/Index.html
@@ -225,11 +225,11 @@
               <span class="tech-tag">Responsive Design</span>
             </div>
             <div class="project-links">
-              <a href="https://github.com/0ashutosh1/todomaster-react" target="_blank" class="project-link">
+              <a href="https://github.com/0ashutosh1/TODO-APP" target="_blank" class="project-link">
                 <i class="fab fa-github"></i>
                 View Code
               </a>
-              <a href="https://0ashutosh1.github.io/todomaster-react" target="_blank" class="project-link">
+              <a href="https://0ashutosh1.github.io/TODO-APP/demo.html" target="_blank" class="project-link">
                 <i class="fas fa-external-link-alt"></i>
                 Live Demo
               </a>
