Update portfolio with integrated TodoMaster React app
- Fixed portfolio TodoMaster project link to use local TODO APP folder
- Created complete React TodoMaster application with priority system and filtering
- Added responsive design and local storage persistence
- Updated .gitignore to exclude node_modules
- Integrated todo app seamlessly with portfolio navigation

--- a/Index.html
+++ b/Index.html
@@ -229,7 +229,7 @@
                 <i class="fab fa-github"></i>
                 View Code
               </a>
-              <a href="https://0ashutosh1.github.io/TODO-APP/demo.html" target="_blank" class="project-link">
+              <a href="TODO APP/index.html" class="project-link">
                 <i class="fas fa-external-link-alt"></i>
                 Live Demo
               </a>
