Update todo app back link to use lowercase index.html

--- a/TODO APP/demo.html
+++ b/TODO APP/demo.html
@@ -476,7 +476,7 @@
                             TodoMaster
                         </h1>
                         <p className="app-subtitle">Advanced React Todo Application</p>
-                        <a href="../Index.html" className="back-button">
+                        <a href="../index.html" className="back-button">
                             <i className="fas fa-arrow-left"></i>
                             Back to Portfolio
                         </a>
