Add professional profile photo to portfolio
- Integrate actual profile photo in hero section
- Replace icon with high-quality professional photo
- Add responsive CSS styling for circular profile image
- Optimize image positioning to focus on face (center 25%)
- Maintain hover effects and professional appearance
- Ensure responsive design works on all devices

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       </div>
       <div class="hero-image">
         <div class="profile-card">
-          <div class="profile-img" role="img" aria-label="Profile illustration of Kumar Ashutosh as a computer science student">
-            <i class="fas fa-user-graduate" aria-hidden="true"></i>
+          <div class="profile-img" role="img" aria-label="Profile photo of Kumar Ashutosh - Computer Science Student">
+            <img src="profile-photo.jpg" alt="Kumar Ashutosh - Computer Science Student" class="profile-photo">
           </div>
           <div class="floating-icons">
             <i class="fab fa-js-square"></i>
