feat: add Logixo project to portfolio

--- a/index.html
+++ b/index.html
@@ -210,6 +210,30 @@
         <p>Here are some of my recent projects that showcase my skills and passion for development</p>
       </div>
       <div class="project-container">
+        <div class="project-card">
+          <div class="project-image">
+            <i class="fas fa-briefcase"></i>
+          </div>
+          <div class="project-content">
+            <h3>Logixo - Business Website</h3>
+            <p>A professional website for a business named Logixo, showcasing their services and portfolio. Built with a focus on clean design and user experience.</p>
+            <div class="project-tech">
+              <span class="tech-tag">React</span>
+              <span class="tech-tag">Tailwind CSS</span>
+              <span class="tech-tag">Next.js</span>
+            </div>
+            <div class="project-links">
+              <a href="https://github.com/0ashutosh1/logixo-website" target="_blank" class="project-link">
+                <i class="fab fa-github"></i>
+                View Code
+              </a>
+              <a href="https://0ashutosh1.github.io/logixo-website/" target="_blank" class="project-link">
+                <i class="fas fa-external-link-alt"></i>
+                Live Demo
+              </a>
+            </div>
+          </div>
+        </div>
         <div class="project-card featured">
           <div class="project-image">
             <i class="fas fa-check-double"></i>
