--- a/index.html
+++ b/index.html
@@ -169,6 +169,26 @@
               <span>React</span>
               <div class="skill-bar"><div class="skill-progress" data-width="75"></div></div>
             </div>
+            <div class="skill-item">
+              <i class="fab fa-react"></i>
+              <span>Next.js</span>
+              <div class="skill-bar"><div class="skill-progress" data-width="75"></div></div>
+            </div>
+            <div class="skill-item">
+              <i class="fab fa-node-js"></i>
+              <span>Node.js</span>
+              <div class="skill-bar"><div class="skill-progress" data-width="70"></div></div>
+            </div>
+            <div class="skill-item">
+              <i class="fas fa-server"></i>
+              <span>Express.js</span>
+              <div class="skill-bar"><div class="skill-progress" data-width="70"></div></div>
+            </div>
+            <div class="skill-item">
+              <i class="fas fa-database"></i>
+              <span>MongoDB</span>
+              <div class="skill-bar"><div class="skill-progress" data-width="70"></div></div>
+            </div>
           </div>
         </div>
         
